Bug fixes, small changes, favicon.

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Basically Bellamy</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>killedbydrones</title>
+    <!--    <meta name="viewport" content="width=device-width, initial-scale=1">-->
 
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/screen.css">
+    <link rel="icon" type="image/x-icon" href="images/favicon.png" />
 
     <!-- JavaScript -->
     <script type="text/javascript" src="javascript/jquery-2.1.0.min.js"></script>
@@ -49,7 +50,7 @@
         <div id="faq">
             <span class="big">Credits</span>
             <p>Game - /u/CitizenMisphrased</p>
-            <p>Music - /u/Grifsgames</p>
+            <p>Sound - u/MapToYourBed</p>
             <br>
             <br>
             <span class="big">Info</span>
@@ -58,13 +59,14 @@
             <p>Tested in the latest versions of Chrome, Moz, Edge &amp; Opera</p>
             <p>I am not a game developer, I study something with web, code &amp; design. This is just an overly complicated website really</p>
             <p>You can report bugs if you're running an updated, stable OS with a recent version of the browsers mentioned above</p>
-            <p>I worked hard on this, you better enjoy it!</p>
             <br>
+            <p>Cheers!</p>
             <p>- /u/CitizenMisphrased</p>
         </div>
         <div id="reddit">
 
         </div>
+        <footer>"I wanna play the game, I want the friction"</footer>
     </div>
 
 </body>
