--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
             <span class="big">Info</span>
             <p>Made from scratch in HTML, CSS, JS &amp; JQuery</p>
             <p>Software: Brackets, Photoshop, Illustrator</p>
-            <p>Tested in the latest versions of Chrome, Moz, Edge &amp; Opera</p>
+            <p>Tested in the latest versions of Chrome, Moz, Edge &amp; Opera
+                <br> <strong>edit: safari seems to have a hitbox problem.</strong></p>
             <p>I am not a game developer, I study something with web, code &amp; design. This is just an overly complicated website really</p>
             <p>You can report bugs if you're running an updated, stable OS with a recent version of the browsers mentioned above</p>
             <br>
